[package]
name = "lqft"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
atomic_float = "1.1.0"
hdf5-metno = { version = "0.12.3", features = ["static", "zlib"] }
indicatif = "0.18.4"
ndarray = "0.17.2"
num-traits = "0.2.19"
plotters = "0.3.7"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
